<resources>
    <string name="app_name">Jira</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_to_continue">Log in to continue</string>
    <string name="jira">Jira</string>
    <string name="sample_text_for_the_purpose">sample text for the purpose</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="by_signing_up_you_agree_to_the_n_user_notice_and_privacy_policy">By signing up.you agree to the \n User Notice and Privacy Policy.</string>
    <string name="can_t_log_in_or_sign_up">Can\'t log in or sign up?</string>
    <string name="default_web_client_id">YOUR_CLIENT_ID_HERE</string>
    <string name="sign_out">signOut</string>
    <string name="add_field">Add Field</string>
    <string name="employee_name">Employee Name</string>
    <string name="code">Code</string>
    <string name="what_s_your_role">What\'s Your Role</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="projects">Projects</string>
    <string name="notifications">Notifications</string>
    <string name="cant_log">Can\'t log in or sign up?</string>
    <string name="login_help">Login Help</string>
    <string name="contact_us">Contact us</string>
    <string name="project_name">Project Name</string>
    <string name="project_description">Project description</string>
    <string name="create_project">Create Project</string>
    <string name="module">Module</string>
    <string name="tasks">Tasks</string>
    <string name="assign">Assign</string>
    <string name="submit_task">Submit Task</string>
    <string name="time">Time</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="or_continue_with">Or continue with:</string>
    <string name="google">Google</string>
    <string name="microsoft">Microsoft</string>
    <string name="apple">Apple</string>
    <string name="slack">Slack</string>
    <string name="can_t_log_in">Can\'t log in?</string>
    <string name="project_name_In">Project Name</string>
    <string name="textview">TextView</string>
    <string name="create_tasks">Create Tasks</string>
    <string name="profile_information">Profile information</string>
    <string name="email">Email</string>
    <string name="name">name</string>
    <string name="projects_home">Projects</string>
    <string name="projects_tasks">Projects Tasks</string>
    <string name="users">Users</string>
    <string name="module_project_task">Module</string>
    <string name="task">Task</string>
    <string name="assignto">AssignTo</string>
    />
</resources>