<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homeMain"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/signInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="20dp"
            android:text="@string/add_field"
            android:textColor="@color/white"
            android:textSize="64sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_text"
            android:elevation="10dp"
            android:ems="10"
            android:hint="@string/employee_name"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:paddingStart="18dp"
            android:shadowColor="@color/black"
            android:shadowDy="4"
            android:textColorHint="#777"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInTextView" />

        <EditText
            android:id="@+id/codeEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_text"
            android:elevation="10dp"
            android:hint="@string/code"
            android:inputType="textPhonetic"
            android:padding="15dp"
            android:paddingStart="18dp"
            android:shadowColor="@color/black"
            android:textColorHint="#777"
            app:layout_constraintEnd_toEndOf="@+id/nameEdit"
            app:layout_constraintStart_toStartOf="@+id/nameEdit"
            app:layout_constraintTop_toBottomOf="@+id/nameEdit" />
        <EditText
            android:id="@+id/role"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_text"
            android:elevation="10dp"
            android:ems="10"
            android:hint="@string/what_s_your_role"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:paddingStart="18dp"
            android:shadowColor="@color/black"
            android:shadowDy="4"
            android:textColorHint="#777"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/codeEdit" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/time"
            app:layout_constraintBottom_toBottomOf="@+id/nameEdit"
            app:layout_constraintEnd_toEndOf="@+id/nameEdit"
            app:layout_constraintTop_toTopOf="@+id/nameEdit" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="16dp"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="22dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:elevation="10dp"
                android:text="@string/submit"
                android:textSize="20sp"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toStartOf="@+id/signOutBtn"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>