<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp">

    <TextView
        android:id="@+id/cantLogSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily=""
        android:text="@string/cant_log"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:paddingStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       />
    <TextView
        android:id="@+id/loginHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily=""
        android:text="@string/login_help"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        android:paddingStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cantLogSignUp"
        />
    <TextView
        android:id="@+id/contactUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily=""
        android:text="@string/contact_us"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginHelp"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>