<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateTaskFragment">


    <EditText
        android:id="@+id/module"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text"
        android:elevation="10dp"
        android:hint="@string/module"
        android:inputType="number"
        android:padding="15dp"
        android:paddingStart="18dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColorHint="#777"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tasks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text"
        android:elevation="10dp"
        android:hint="@string/tasks"
        android:inputType="textShortMessage"
        android:padding="15dp"
        android:paddingStart="18dp"
        android:shadowColor="@color/black"
        android:textColorHint="#777"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/module" />

    <EditText
        android:id="@+id/assignTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text"
        android:elevation="10dp"
        android:hint="@string/assign"
        android:inputType="none"
        android:editable="false"
        android:padding="15dp"
        android:paddingStart="18dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColorHint="#777"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tasks" />


    <TextView
        android:id="@+id/submitTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:background="@color/blue"
        android:elevation="10dp"
        android:padding="15dp"
        android:paddingStart="18dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:text="@string/submit_task"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assignTo" />


</androidx.constraintlayout.widget.ConstraintLayout>