<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddProjectFragment">


    <EditText
        android:id="@+id/projectEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text"
        android:elevation="10dp"
        android:hint="@string/project_name"
        android:inputType="text"
        android:padding="15dp"
        android:paddingStart="18dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColorHint="#777"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/desEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text"
        android:elevation="10dp"
        android:hint="@string/project_description"
        android:inputType="text"
        android:padding="15dp"
        android:paddingStart="18dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColorHint="#777"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/projectEdit" />


    <TextView
        android:id="@+id/createPro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:background="@color/blue"
        android:elevation="10dp"
        android:text="@string/create_project"
        android:padding="15dp"
        android:paddingStart="18dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desEdit" />


</androidx.constraintlayout.widget.ConstraintLayout>