<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logInMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.LogInContinueFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/jiraTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:drawableLeft="@drawable/jira_icon"
        android:gravity="center"
        android:text="Jira"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/logInContinue"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@id/logInContinue"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/logInContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/log_in_to_continue"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jiraTv" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/enterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/enteremail_shape"
        android:fontFamily=""
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:paddingVertical="15dp"
        android:paddingStart="5dp"
        android:textColorHint="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/logInContinue"
        app:layout_constraintStart_toStartOf="@id/logInContinue"
        app:layout_constraintTop_toBottomOf="@id/logInContinue" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/continueTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/continue_shape"
        android:fontFamily=""
        android:paddingVertical="12dp"
        android:text="Continue"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/enterEmail"
        app:layout_constraintStart_toStartOf="@id/enterEmail"
        app:layout_constraintTop_toBottomOf="@id/enterEmail" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/orContinueWith"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/or_continue_with"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/continueTv"
        app:layout_constraintStart_toStartOf="@id/continueTv"
        app:layout_constraintTop_toBottomOf="@id/continueTv" />

    <LinearLayout
        android:id="@+id/googleLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/shape"
        android:gravity="center"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orContinueWith">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="Google Icon"
            android:src="@drawable/google_icon" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/googleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily=""
            android:text="@string/google"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/microsoftLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape"
        android:gravity="center"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="@id/googleLayout"
        app:layout_constraintStart_toStartOf="@id/googleLayout"
        app:layout_constraintTop_toBottomOf="@id/googleLayout">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="Google Icon"
            android:src="@drawable/microsoft_logo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/microsoftTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily=""
            android:text="@string/microsoft"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/appleLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape"
        android:gravity="center"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="@id/microsoftLayout"
        app:layout_constraintStart_toStartOf="@id/microsoftLayout"
        app:layout_constraintTop_toBottomOf="@id/microsoftLayout">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="Apple Icon"
            android:src="@drawable/apple_icon" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/appleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily=""
            android:text="@string/apple"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/slackLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape"
        android:gravity="center"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="@id/appleLayout"
        app:layout_constraintStart_toStartOf="@id/appleLayout"
        app:layout_constraintTop_toBottomOf="@id/appleLayout">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="Slack Icon"
            android:src="@drawable/slack_logo_icon" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/slackTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily=""
            android:text="@string/slack"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cantLogIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/can_t_log_in"
        android:textAlignment="center"
        android:textColor="@color/lightBlue"
        app:layout_constraintEnd_toEndOf="@id/slackLayout"
        app:layout_constraintStart_toStartOf="@id/slackLayout"
        app:layout_constraintTop_toBottomOf="@id/slackLayout" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/atlassian_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cantLogIn" />
</androidx.constraintlayout.widget.ConstraintLayout>